discussion/kv_engine/128640/128640_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Move server_stats to StatCollector interface

Change-Id: I0036d990c26f1a1607def6841ed85610bbde5bc2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-06-03 14:50:32.000000000
Message: 
Uploaded patch set 9: New patch set was added with same tree, parent, and commit message as Patch Set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-03 15:51:31.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2531/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: unknown type name "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: unknown type name "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds)
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:65:1: error: expected function body after function declarator [clang-diagnostic-error]
STAT(ep_storage_age_highwat, microseconds)
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2531/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6:
error: unknown type name "ep_storage_age" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2531/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24368/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24368/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1046/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
